# 1brc

./: .gitignore  1brc.cabal  LICENSE  cabal.project
app/: Main.hs
src/: Create.hs  OneBRC.hs
